<resources>
    <string name="app_name">NewsAgent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news_feeds">News Feeds</string>
    <string name="category">Category</string>
    <string name="liked_feeds">Liked Feeds</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="circle_text">  \u25CF  </string>
    <string name="placeholde_string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="widget_empty_content">No news feeds found. Please launch the app at least once.</string>

    <string-array name="available_catgories">
        <item>GENERAL</item>
        <item>SPORTS</item>
        <item>TECHNOLOGY</item>
        <item>ENTERTAINMENT</item>
        <item>BUSINESS</item>
        <item>MUSIC</item>
    </string-array>

    <string-array name="category_sports">
        <item>bbc-sport</item>
        <item>espn</item>
        <item>espn-cric-info</item>
        <item>football-italia</item>
        <item>four-four-two</item>
        <!--
        <item>the-sport-bible</item>
        <item>talksport</item>
        <item>fox-sports</item>
        <item>nfl-news</item>
-->
    </string-array>

    <string-array name="category_general">
        <item>bild</item>
        <item>al-jazeera-english</item>
        <item>abc-news-au</item>
        <item>associated-press</item>
        <item>bbc-news</item>
    </string-array>


    <string-array name="category_technology">
        <item>hacker-news</item>
        <item>engadget</item>
        <item>techradar</item>
        <item>techcrunch</item>
        <item>recode</item>
    </string-array>


    <string-array name="category_business">
        <item>bloomberg</item>
        <item>business-insider</item>
        <item>business-insider-uk</item>
        <item>cnbc</item>
        <item>the-economist</item>
    </string-array>


    <string-array name="category_music">
        <item>mtv-news</item>
        <item>mtv-news-uk</item>
    </string-array>

    <string-array name="category_entertainment">
        <item>entertainment-weekly</item>
        <item>mashable</item>
        <item>newsweek</item>
        <item>buzzfeed</item>
        <item>daily-mail</item>
    </string-array>
    <string name="appwidget_text">@string/app_name</string>
    <string name="add_widget">Add widget</string>
    <string name="action_share">Share</string>
    <string name="alert_msg_likes_addition_success">Added into likes.</string>
    <string name="action_remove">REMOVE</string>
    <string name="alert_likes_remove_success">Removed from likes.</string>
    <string name="action_add_again">ADD AGAIN</string>
    <string name="shared_elements_newsarticle">newsarticle</string>
    <string name="shared_elements_article_titile_name">newsarticletitle</string>
    <string name="shared_elements_article_date">newsarticledate</string>
    <string name="shared_elements_article_author">newsarticleauthor</string>
    <string name="content_desc_like_button">Like Button</string>
    <string name="tab_title_general">GENERAL</string>
    <string name="tab_titile_sports">SPORTS</string>
    <string name="tab_title_entertainment">ENTERTAINMENT</string>
    <string name="tab_title_business">BUSINESS</string>
    <string name="tab_titile_technology">TECHNOLOGY</string>
    <string name="tab_titile_music">MUSIC</string>
    <string name="about_app_text">NeswAgent v 1.0.0\n\n\nNewsAgent is an Android application which aggregates all the latest news of categories like General, Entertainment, Sports, Business, Technology, Music.\n\n\nAdditionally NewsAgent application provides the ability to like and store the news content for future reference. Users can share the news content.\n\n\nThis application is created as a capstone project for the Android Nanodegree Developer program.</string>
    <string name="app_short_desc">Perfect news application</string>
    <string name="content_desc_article_image">Article Image</string>
    <string name="content_desc_category_selection_general">Category Selection Image - General</string>
    <string name="content_desc_category_selection_sports">Category Selection Image - Sports</string>
    <string name="content_desc_category_selection_entertainment">Category Selection Image - Entertainment</string>
    <string name="content_desc_category_selection_business">Category Selection Image - Business</string>
    <string name="content_desc_category_selection_technology">Category Selection Image - Technology</string>
    <string name="content_desc_category_selection_music">Category Selection Image - Music</string>
    <string name="content_desc_application_icon">Application icon</string>
    <string name="msg_no_articles_found">No Articles found in this category for now</string>
    <string name="msg_no_likes_yet">You have no liked articles yet.</string>


</resources>

