<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feeds"
            android:icon="@drawable/ic_menu_feeds"
            android:title="@string/news_feeds" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_likes"
            android:icon="@drawable/ic_menu_like"
            android:title="@string/liked_feeds" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
    </group>

</menu>
