<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutGeneral"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:layout_weight="1">

    <ImageView
        android:id="@+id/ivNewsFeedImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/content_desc_article_image"
        android:transitionName="@string/shared_elements_newsarticle"
        app:srcCompat="@drawable/vector_general" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="bottom"
        android:background="@drawable/image_scrim_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSourceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="2dp"
                android:background="@drawable/text_bg_source_name"
                android:padding="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                tools:text="Techcrunch" />

            <TextView
                android:id="@+id/tvNewsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvSourceName"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/tvSourceName"
                android:layout_below="@+id/tvSourceName"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:transitionName="@string/shared_elements_article_titile_name"
                tools:text="Some title that is going to be here for testing purpose" />

            <TextView
                android:id="@+id/tvAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvNewsTitle"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/tvNewsTitle"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:transitionName="@string/shared_elements_article_author"
                tools:text="Author name" />

            <TextView
                android:id="@+id/tvPusblishedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tvAuthorName"
                android:layout_alignEnd="@+id/tvNewsTitle"
                android:layout_alignRight="@+id/tvNewsTitle"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:transitionName="@string/shared_elements_article_date"
                tools:text="19/Oct/2017 19:00:45" />
        </RelativeLayout>

    </FrameLayout>


</FrameLayout>
